WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69329
[WebKit2][gtk] Fix warnings while generating documentation using gtk-doc.
https://bugs.webkit.org/show_bug.cgi?id=69329
Summary
[WebKit2][gtk] Fix warnings while generating documentation using gtk-doc.
Nayan Kumar K
Reported
2011-10-04 02:29:56 PDT
Fix warnings while generating WebKit2-GTK+ API documentation using gtk-doc.
Attachments
Warning fix
(6.09 KB, patch)
2011-10-04 02:37 PDT
,
Nayan Kumar K
no flags
Details
Formatted Diff
Diff
Warning fix
(5.52 KB, patch)
2011-10-04 07:30 PDT
,
Nayan Kumar K
mrobinson
: review-
Details
Formatted Diff
Diff
Warning fix
(5.52 KB, patch)
2011-10-04 09:18 PDT
,
Nayan Kumar K
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Nayan Kumar K
Comment 1
2011-10-04 02:37:03 PDT
Created
attachment 109599
[details]
Warning fix
Gustavo Noronha (kov)
Comment 2
2011-10-04 06:01:03 PDT
Comment on
attachment 109599
[details]
Warning fix View in context:
https://bugs.webkit.org/attachment.cgi?id=109599&action=review
> Source/WebKit2/UIProcess/API/gtk/WebKitError.h:37 > + * @WEBKIT_NETWORK_ERROR_FAILED: Protocol breakdown is detected.
Protocol breakdown sounds unnecessarily techy, can we do better? =) is this what we get when there's failure resolving DNS, the connection is refused or drops? What's the difference from this to transport error?
> Source/WebKit2/UIProcess/API/gtk/WebKitError.h:40 > + * @WEBKIT_NETWORK_ERROR_CANCELLED: Requested operation is invalid.
Cancelled = invalid?
Nayan Kumar K
Comment 3
2011-10-04 07:30:21 PDT
Created
attachment 109621
[details]
Warning fix Updated patch
Nayan Kumar K
Comment 4
2011-10-04 07:36:58 PDT
Comment on
attachment 109599
[details]
Warning fix View in context:
https://bugs.webkit.org/attachment.cgi?id=109599&action=review
>> Source/WebKit2/UIProcess/API/gtk/WebKitError.h:37
> > Protocol breakdown sounds unnecessarily techy, can we do better? =) is this what we get when there's failure resolving DNS, the connection is refused or drops? What's the difference from this to transport error?
:). Changed the description for WEBKIT_NETWORK_ERROR_FAILED to "Resource loading failed" in modified patch. Please note that, there aren't any documentation for these enums anywhere in source code. WebKit1 lacks the documentation for these enums, mac and other ports doesn't expose them and it is not clear from source code when they get triggered. These documentation are the best I could make by referring Source/WebCore/platform/gtk/ErrorsGtk.cpp and
http://doc.qt.nokia.com/4.7-snapshot/qnetworkreply.html
>> Source/WebKit2/UIProcess/API/gtk/WebKitError.h:40 >> + * @WEBKIT_NETWORK_ERROR_CANCELLED: Requested operation is invalid. > > Cancelled = invalid?
Changed it to 'Load request cancelled', as per Source/WebCore/platform/gtk/ErrorsGtk.cpp.
Martin Robinson
Comment 5
2011-10-04 08:46:40 PDT
Comment on
attachment 109621
[details]
Warning fix View in context:
https://bugs.webkit.org/attachment.cgi?id=109621&action=review
I really, really, really, really appreciate this! Please accept my humble suggestion below.
> Source/WebKit2/UIProcess/API/gtk/WebKitError.h:41 > + * @WEBKIT_NETWORK_ERROR_FAILED: Resource loading failed. > + * @WEBKIT_NETWORK_ERROR_TRANSPORT: Transport protocol error. > + * @WEBKIT_NETWORK_ERROR_UNKNOWN_PROTOCOL: Can not honor the request because protocol is not known. > + * @WEBKIT_NETWORK_ERROR_CANCELLED: Load request is cancelled. > + * @WEBKIT_NETWORK_ERROR_FILE_DOES_NOT_EXIST: File does not exists error.
I think we should use a consistent phrase for all of these and avoid the use of periods (since they aren't complete sentences): So: Generic load failure Load failure due to transport error Load failure due to unknown protocol Load failure due to cancellation Load failure due to missing file
Nayan Kumar K
Comment 6
2011-10-04 09:18:36 PDT
Created
attachment 109629
[details]
Warning fix
Nayan Kumar K
Comment 7
2011-10-04 09:20:41 PDT
(In reply to
comment #5
)
> (From update of
attachment 109621
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=109621&action=review
> > I really, really, really, really appreciate this! Please accept my humble suggestion below. >
Thank you for the suggestion, modified the patch accordingly.
WebKit Review Bot
Comment 8
2011-10-04 10:38:39 PDT
Comment on
attachment 109629
[details]
Warning fix Clearing flags on attachment: 109629 Committed
r96606
: <
http://trac.webkit.org/changeset/96606
>
WebKit Review Bot
Comment 9
2011-10-04 10:38:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug