[WebKit2][gtk] Fix warnings while generating documentation using gtk-doc. https://bugs.webkit.org/show_bug.cgi?id=69329

Patch by Nayan Kumar K <nayankk@motorola.com> on 2011-10-04
Reviewed by Martin Robinson.

Added documentation for WebKitNetworkError enum and corrected few other
minor issues in WebKit2-GTK+ API documentation.

* UIProcess/API/gtk/WebKitError.h: Added documentation for WebKitNetworkError.
* UIProcess/API/gtk/WebKitWebLoaderClient.cpp:
(webkit_web_loader_client_class_init): Corrected parameter name.
* UIProcess/API/gtk/WebKitWebView.cpp: Corrected annotation.

Canonical link: https://commits.webkit.org/85368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96606 268f45cc-cd09-0410-ab3c-d52691b4dbfc